# starlink-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs
codegen/static/: README.md  device.protoset
examples/: request_response.rs  streaming.rs  try_out_all_requests.rs
proto/spacex/api/common/status/: status.proto
proto/spacex/api/device/: command.proto  common.proto  device.proto  dish.proto  service.proto  transceiver.proto  wifi.proto  wifi_config.proto
src/: lib.rs  main.rs
