[package]
name = "starlink"
version = "0.1.0"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2018"
description = "Rust client implementation to the gRPC endpoint exposed by the SpaceX Starlink user terminal"
documentation = "https://docs.rs/starlink"
readme = "README.md"
repository = "https://github.com/ewilken/starlink-rs"
license = "MIT/Apache-2.0"
keywords = ["spacex", "starlink"]
exclude = [
    ".github",
    "codegen",
    "examples",
    ".gitignore",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rustfmt.toml",
]

[dependencies]
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
async-stream = "0.3"
tokio = { version = "1.5", features = ["rt-multi-thread"] }

[workspace]
members = ["codegen"]
