[package]
name = "starlink"
version = "0.3.1"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2018"
description = "Rust client implementation to the gRPC endpoint exposed by the SpaceX Starlink user terminal"
documentation = "https://docs.rs/starlink"
readme = "README.md"
repository = "https://github.com/ewilken/starlink-rs"
license = "MIT/Apache-2.0"
keywords = ["spacex", "starlink"]
exclude = [
    ".github",
    "codegen",
    "examples",
    ".gitignore",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rustfmt.toml",
]

[dependencies]
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
async-stream = "0.3"
tokio = { version = "1.5", features = ["rt-multi-thread"] }

[workspace]
members = ["codegen"]
