[package]
name = "starlink"
version = "1.0.0"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2021"
description = "Rust client implementation to the gRPC endpoint exposed by the SpaceX Starlink user terminal"
documentation = "https://docs.rs/starlink"
readme = "README.md"
repository = "https://github.com/ewilken/starlink-rs"
license = "MIT/Apache-2.0"
keywords = ["spacex", "starlink"]
exclude = [
    ".github",
    "codegen",
    "examples",
    ".gitignore",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rustfmt.toml",
]

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
async-stream = "0.3.5"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }

[workspace]
members = ["codegen"]
